--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-reanimated": "^2.2.2",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "1.0.0-alpha.23",
+    "react-native-tiny-toast": "^1.0.7",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.3.1"
   },
